♻️  improve some examples